# primesh

./: .flake8  .gitignore  LICENSE  README.md  ks_custom.py  prime.py  primesh_crib.ipynb  pyproject.toml  scratch.ipynb  sw_lib.py  sw_scripts.py
plots/: paper.mplstyle
presentations/AGU 2023/: primesh_agu_2023.ai  primesh_agu_2023_big.ai  scraps.ai
